--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,14 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
+# Model files
+*.pkl
+*.joblib
+
+# Data files
+*.csv
+
+# Environment variables
+.env
